# minnow-language

./: CMakeLists.txt  LICENSE.TXT  ProjectHome.md  README.TXT
aquarium/: Aquarium.cpp  Aquarium.hpp  Char_String.cpp  Common.hpp  Message.hpp  Message_Channel.cpp  Message_Channel.hpp  Minnow_Prelude.cpp  Minnow_Prelude.hpp  Object_Feature.cpp  Object_Feature.hpp  Scheduler.cpp  Scheduler.hpp  Threading.hpp  Typeless_Dictionary.cpp  Typeless_Dictionary.hpp  Typeless_Vector.cpp  Typeless_Vector.hpp
aquarium/BSD/: Threading.cpp
aquarium/tests/: Test_Char_String.c  Test_Msg_Isolated_Actor.c  Test_Threadring.c  Test_Typeless_Vector.c
branches/alpha1/samples/: counter.mno  counter2.mno  hello.mno  pass_array.mno  (+1 more)
branches/alpha3/: Doxyfile_Aquarium  prelude.mno  run_perftests.py
branches/alpha3/contrib/sdl/: CMakeLists.txt  sdl.mno  sdl_base.c
contrib/geshi/: minnow.php
minnowc/: Analyzer.cpp  Codegen_C.cpp  Codegen_C.hpp  Common.hpp  Compiler.hpp  LexParser.cpp  LexParser.hpp  Program.cpp  Type_Analyzer.hpp  Var_Scope_Analyzer.cpp  main.cpp
perftests/: binary_trees.mno
samples/: action2.mno  array.mno  array2.mno  array3.mno  bool.mno  broken_action.mno  calls.mno  char_test.mno  constructor.mno  cont.mno  deep_call.mno  delete.mno  embedded4.mno  eol.mno  eq.mno  eq2.mno  feature_query.mno  file_op.txt  fixme_simple_isolated.mno  fun_eq.mno  fun_fun2.mno  fun_if.mno  fun_new.mno  fun_simple.mno  hello_isolated.mno  if.mno  isolated_actor2.mno  mandelbrot.mno  mandelbrot2.mno  ns.mno  num.mno  obj4.mno  obj5.mno  pixel_calc_array_sdl.mno  pixel_calc_array_sdl2.mno  pixel_calculator.mno  quotes.mno  return2.mno  sdltest.mno  simple.mno  (+9 more)
src/minnow/: codegen_cppoutput.cpp  codegen_cppoutput.hpp
trunk/: CMakeLists.txt  LICENSE.TXT  README.TXT  integration.sh  minnow.nsi  prelude.mno  readme.txt  runSelfTests.sh  run_perftests.py  run_unittests.py  unittests.py
trunk/aquarium/: Aquarium.cpp  Aquarium.hpp  Char_String.cpp  Char_String.hpp  Common.hpp  Message_Channel.cpp  Minnow_Prelude.cpp  Minnow_Prelude.hpp  Object_Feature.hpp  Scheduler.cpp  Scheduler.hpp  Threading.hpp  Typeless_Dictionary.cpp  Typeless_Dictionary.hpp  Typeless_Vector.cpp  Typeless_Vector.hpp
trunk/aquarium/BSD/: Threading.cpp
trunk/aquarium/Linux/: Threading.cpp
trunk/aquarium/Mac/: Threading.cpp
trunk/aquarium/Solaris/: Threading.cpp
trunk/aquarium/Windows/: Threading.cpp
trunk/aquarium/tests/: Test_Cmd_Line.c  Test_Data_Threadring.c  Test_Rebalance.c  Test_Threading.cpp  Test_Threadring.c
trunk/branches/alpha1/: license.txt  relnotes.txt
trunk/branches/alpha1/samples/: large_proto.mno  object_method.mno  pass_array2.mno  pass_string.mno
trunk/branches/alpha1/src/minnow/: lexer.hpp
trunk/contrib/geshi/: minnow.php
trunk/contrib/sdl/: CMakeLists.txt  README.TXT  sdl.mno  sdl_base.c
trunk/contrib/vim/: README.txt
trunk/contrib/vim/indent/: minnow.vim
trunk/contrib/vim/syntax/: minnow.vim
trunk/minnowc/: Analyzer.cpp  Analyzer.hpp  Codegen_C.cpp  Codegen_C.hpp  Common.hpp  Compiler.hpp  LexParser.cpp  LexParser.hpp  Program.cpp  Program.hpp  Type_Analyzer.cpp  Type_Analyzer.hpp  Var_Scope_Analyzer.cpp  Var_Scope_Analyzer.hpp  main.cpp  prelude.mno
trunk/perftests/: binary_trees.mno  chameneosredux.mno  mandelbrot.mno  nbody.mno  rebalance.arg  threadring.mno
trunk/samples/: action_recurse.mno  array.mno  array2.mno  array3.mno  big_bang.mno  broken_stray.mno  char_test.mno  constructor.mno  convert.mno  ctr.mno  delete.mno  echo.mno  eq.mno  fasta2.mno  feature_query.mno  file_op.mno  fixme_action.mno  fixme_simple_isolated.mno  full.mno  fun_fun.mno  fun_if.mno  hello.mno  hello_isolated.mno  id.mno  if.mno  if_compound.mno  isolated_actor.mno  isolated_actor2.mno  mandelbrot.mno  mandelbrot2.mno  ns.mno  ns_fun.mno  ns_var.mno  obj.mno  obj2.mno  obj5.mno  obj6.mno  obj7.mno  pass_array3.mno  pass_array3_1.mno  (+23 more)
trunk/src/aquarium/: aquarium.cpp  aquarium.hpp
trunk/src/minnow/: analyser.cpp  analyser.hpp  codegen_cppoutput.cpp  codegen_cppoutput.hpp  lexer.cpp  lexer.hpp  main.cpp  parser.cpp  parser.hpp  parser_new.cpp  parser_new.hpp
trunk/unittests/actors/: isolated_action.mno  long_ctr_actor.mno  long_ctr_actor2.mno  long_ctr_actor_member.mno  long_ctr_isolated.mno  long_ctr_isolated2.mno
trunk/unittests/arrays/: concat_array.mno  concat_array_complex.mno  feature_array.mno  multidim.mno
trunk/unittests/control/: for.mno  if2.mno  if3.mno  if4.mno
trunk/unittests/conversion/: float_to_string.tst
trunk/unittests/dictionaries/: contains_key.mno  has_key.mno
trunk/unittests/exceptions/: exception.mno  exception2.mno  exception3.mno
trunk/unittests/features/: auto_delete_check.mno  cpy.mno  ctr.mno  dtr.mno  embedded_meld.mno  is_null.tst  method.mno  obj_exists.mno  obj_is_null.mno
trunk/unittests/integration/: great_collector.mno  include_source.mno
trunk/unittests/internal_methods/: convert.tst  convert2.mno
trunk/unittests/operators/: negate.tst  overload.mno  overload2.mno  precedence.mno  precedence2.mno
trunk/unittests/regressions/: complex_attrib_lhs.mno
trunk/unittests/simpledata/: enum.tst  enum_ns.mno  returnbool2.mno
trunk/unittests/strings/: compare_ge.mno  compare_gt.mno  compare_lt.mno  compare_ne.mno  concat.tst  concat2.mno  delete.mno  lines.mno  pop.tst  substr.mno
unittests/actors/: action_recurse.mno
unittests/arrays/: elem.mno  init2.mno  pop.mno
unittests/compiler_errors/: broken_action.err  broken_action.mno
unittests/control/: while2.mno  while2.tst
unittests/exceptions/: exception.mno
unittests/features/: auto_delete_check.tst  del.mno  long_ctr2.tst  unmeld.mno
unittests/integration/: great_collector.tst  simple_collector.mno  threadring.mno
unittests/internal_methods/: convert2.mno
unittests/operators/: bits.tst  divide.mno  multiline.tst  overload.tst  overload2.mno  power.mno  stack.tst  stack2.tst  subtract.mno
unittests/regressions/: continued_equation.mno  elseif.mno
unittests/simpledata/: enum_print.mno
unittests/strings/: compare.mno  compare_le.mno  concat2.mno  pop.mno
(+129 files in other folders)
